# collect

./: .gigignore  .gitignore  source_code deconstruct log
collect/: pyproject.toml
collect/collect/: db.py  main.py  models.py  settings.py
collect/collect_stats/: db.py  main.py  models.py
on-server/: mainer.sh
